--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="blocks">
         <div class="block-background">
           <div class="block1">
-            <div>Hi!</div>
+            <div>Vatsal Gupta!</div>
             <div>
               I'm
               <p style="display: inline; font-weight: bold; color: #803fe2">
