--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       <div class="blocks">
         <div class="block-background">
           <div class="block1">
-            <div>Welcome!</div>
-            <div>
+            <img src="./public/vat.png" alt="Your Name" class="profile-picture">  <div>
+              Welcome!
+            </div>
               I'm
               <p style="display: inline; font-weight: bold; color: #803fe2">
                 Vatsal Gupta
@@ -58,6 +59,7 @@
               I am pursuing an M.Tech in Computer Science and Engineering from IIIT Hyderabad, 
               further honing my skills and expanding my expertise in the field.
             </div>
+            
             <div>
               <a
                 href="https://drive.google.com/file/d/1lX_Fuax2KxZaGn9TfQ8JYHJcwuIC2QWM/view?usp=drivesdk"
